fixed overflow on admin page

--- a/mycelium/apps/mycelium_core/static/css/more.css
+++ b/mycelium/apps/mycelium_core/static/css/more.css
@@ -5,7 +5,8 @@
 .more_button {
 	border-radius: 4px;
 	-moz-border-radius: 4px;
-	-webkit-border-radius: 4px;	
+	-webkit-border-radius: 4px;
+	position: relative;
 	display: block;
 	width: 30%;
 	padding: 10px 20px 20px 130px;
@@ -20,10 +21,13 @@
 	font-size: 30px;
 /*	text-align: center;*/
 	padding-top: 9px;
+	white-space: normal;
 }
 .more_button .button_description {
+	display: block;
 	font-size: 14px;
 	color: #92C2FC;
+	white-space: normal;
 /*	text-align: center;	*/
 }
 .more_button:hover .button_description {
@@ -62,6 +66,9 @@
 	background-position: 14px 23px;	
 }
 .more_row {
+	display: block;
+	position: relative;
 	clear: left;
 	width: 100%;
+	overflow: auto;
 }
